# RaspberryPi-Config

./: README.md
turret/: options.cfg  turret-main.py
turret-cpp/: .gitignore  CMakeLists.txt  README.md  build.sh
turret-cpp/cmake/Modules/: FindwiringPi.cmake
turret-cpp/data/: options.cfg
turret-cpp/scripts/: calibrate.m  prep-system.sh
turret-cpp/src/: CMakeLists.txt  PiDefender.hpp.in  main.cpp
turret-cpp/src/apps/: CMakeLists.txt
turret-cpp/src/apps/pi-def/: CMakeLists.txt  main.cpp
turret-cpp/src/apps/pi-def/calibration/: Calibration_Mode.cpp  Calibration_Mode.hpp
turret-cpp/src/apps/pi-def/core/: Enumerations.cpp  Enumerations.hpp  Options.cpp  Options.hpp
turret-cpp/src/apps/pi-servo-test/: CMakeLists.txt  main.cpp
turret-cpp/src/apps/pi-servo-test/core/: Options.cpp  Options.hpp
turret-cpp/src/calibration/: Calibration_Mode.cpp  Calibration_Mode.hpp
turret-cpp/src/camera/: Tracker.cpp
turret-cpp/src/core/: Enumerations.cpp  Enumerations.hpp  GPIO_Utilities.cpp  Log_Utilities.hpp  Options.cpp  Options.hpp  String_Utilities.hpp
turret-cpp/src/lib/: CMakeLists.txt  PiDefender.hpp.in
turret-cpp/src/lib/PiDef/camera/: Tracker.cpp  Tracker.hpp
turret-cpp/src/lib/PiDef/core/: Enumerations.cpp  Enumerations.hpp  GPIO_Utilities.cpp  GPIO_Utilities.hpp  Log_Utilities.cpp  String_Utilities.cpp
turret-cpp/src/lib/PiDef/pwm/: PWM_Driver.cpp  PWM_Driver.hpp  Turret_Controller.cpp  Turret_Controller.hpp
turret-cpp/src/pwm/: PWM_Driver.cpp  PWM_Driver.hpp  Turret_Controller.cpp  Turret_Controller.hpp
turret-py/: README.md  options.cfg  turret-main.py
turret-py/core/: Options.py
turret-py/pwm/: TurretDriver.py
turret/core/: Options.py
turret/pwm/: Adafruit_PWM_Servo_Driver.py  TurretDriver.py
vnc/: vncboot.sh
