#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    4/10/2016
#
#    Purpose:  Construct the PiDef Source Directory Projects
#


#----------------------------#
#-    Create the Library    -#
#----------------------------#
add_subdirectory(lib)


#-----------------------------#
#-    Create Applications    -#
#-----------------------------#
add_subdirectory(apps)

