#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    4/10/2016
#
#    Purpose:  Construct Applications
#

#----------------------------------------#
#-     Build the PiDef Application      -#
#----------------------------------------#
add_subdirectory(pi-def)


#----------------------------------------#
#-     Build the PiDef Servo Tester     -#
#----------------------------------------#
add_subdirectory(pi-servo-test)


